2004-09-03  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.def: Update.

Wed Sep  1 20:22:39 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gdate.h:
	* glib/gdate.c (g_date_get_iso8601_week_of_year): Add
	a function to calculate the ISO 8601 week number of 
	a date.  (#92579, Niklas Lundell)

2004-09-01  Anders Carlsson  <andersca@gnome.org>

	* glib/goption.c: (g_option_context_parse):
	Set program name before calling the pre-parse hooks.
	
2004-09-01  Anders Carlsson  <andersca@gnome.org>

	* glib/goption.c: (g_option_context_free), (print_help),
	(g_option_context_parse):
	Handle option contexts without a main group.
	
	* tests/option-test.c: (empty_test2), (main):
	Add test case for that.
	
2004-08-30  Anders Carlsson  <andersca@gnome.org>

	* glib/goption.c: (g_option_context_parse):
	Set prgname to <unknown> if argc and argv are NULL.
	
	* tests/option-test.c: (empty_test1), (main):
	Add test case for that.
	
Sun Aug 29 23:58:38 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/ghash.c (g_hash_table_lookup): Point to 
	g_hash_table_lookup_extended() for differentiation between
	not-found and value-is-NULL.  (#150960, Morten Welinder)

2004-08-27  Matthias Clasen  <mclasen@redhat.com>

	Fix #151193, Stepan Kasal:
	
	* glib/gfileutils.c (g_file_error_from_errno): 
	* glib/gfileutils.h (enum GFileError): Add G_FILE_ERROR_NOSYS.

Fri Aug 27 00:45:41 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/goption.c (g_option_context_parse): Set the program name
	from argv[0], noticed by Masatake YAMATO.

2004-08-26  Tor Lillqvist  <tml@iki.fi>

	* tests/testglib.c (main): Test the new XDG basedir functions.

2004-08-25  Tor Lillqvist  <tml@iki.fi>

	* glib/gwin32.c (g_win32_get_windows_version): New
	function. Returns the Windows version code like GetVersion(),
	except that one can pretend to be running on Win9x by setting the
	G_WIN32_PRETEND_WIN9X environment variable. This is mainly for
	debugging purposed.
